--- a/CMSArticle/Areas/Admin/Views/Categories/Index.cshtml
+++ b/CMSArticle/Areas/Admin/Views/Categories/Index.cshtml
@@ -1,16 +1,20 @@
-﻿@model IEnumerable<CMS.ModelLayer.Category>
+﻿@model IEnumerable<CMSArticle.Views.ViewModel.CategoryViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "دسته بندی ها";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<h2>لیست دسته بندی ها</h2>
+<br />
+<br />
+<input type="button" value="ایجاد دسته بندی جدید" class="btn btn-default btn-success" onclick="location.href='@Url.Action("Create")'" />
+<br />
+<br />
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.CategoryId)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Title)
         </th>
@@ -20,20 +24,27 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ImageName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CategoryId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CategoryId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CategoryId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CategoryId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                <img src="~/Images/Category/@item.ImageName" class="image150-100" />
+            </td>
+            <td>
+                @Html.ActionLink("ویرایش", "Edit", new { id = item.CategoryId }, new { @class = "btn btn-warning" }) |
+                @Html.ActionLink("جزییات", "Details", new { id = item.CategoryId }, new { @class = "btn btn-info" }) |
+                @Html.ActionLink("حذف", "Delete", new { id = item.CategoryId }, new { @class = "btn btn-danger" })
+            </td>
+        </tr>
+    }
+
 
 </table>
+
+
