--- a/CMSArticle/Areas/Admin/Views/Categories/Create.cshtml
+++ b/CMSArticle/Areas/Admin/Views/Categories/Create.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ImageName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <img src="nophoto.png" class="image150-100 form-control" id="newImagePreview"><br />
+                <img src="~/Images/Category/nophoto.png" class="image150-100 form-control" id="newImagePreview"><br />
                 <input type="file" class="form-control" name="newImage" id="imageUpload" onchange="imagePreview(this)" value="nophoto.png" />
                 @Html.ValidationMessageFor(model => model.ImageName, "", new { @class = "text-danger" })
             </div>
@@ -42,12 +42,12 @@
 }
 <script>
     function imagePreview(input) {
-        if (input.files && input.files[0]) {
-            var filerdr = new FileReader();
-            filerdr.onload = function (e) {
-                jQuery('#newImagePreview').attr('src', e.target.result);
-            }
-            filerdr.readAsDataURL(input.files[0]);
+    }
+    filerdr.readAsDataURL(input.files[0]);
+    if (input.files && input.files[0]) {
+        var filerdr = new FileReader();
+        filerdr.onload = function (e) {
+            jQuery('#newImagePreview').attr('src', e.target.result);
         }
     }
 </script>
