--- a/CMSArticle/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/CMSArticle/Areas/Admin/Views/Categories/Edit.cshtml
@@ -16,6 +16,7 @@
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.CategoryId)
+        @Html.HiddenFor(model => model.ImageName)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -44,16 +45,15 @@
 }
 <script>
     function imagePreview(input) {
-        if (input.files && input.files[0]) {
-            var filerdr = new FileReader();
-            filerdr.onload = function (e) {
-                jQuery('#newImagePreview').attr('src', e.target.result);
-            }
-            filerdr.readAsDataURL(input.files[0]);
+    }
+    filerdr.readAsDataURL(input.files[0]);
+    if (input.files && input.files[0]) {
+        var filerdr = new FileReader();
+        filerdr.onload = function (e) {
+            jQuery('#newImagePreview').attr('src', e.target.result);
         }
     }
 </script>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
