feat: add CommentController and their views except create action to restrict admins from inserting comment. feat: add CommentViewModel class. build: add Comment and its viewmodel in AutoMapperConfig class. update ArticlesController including all actions and view. change cockies time to 1000 mins.

--- a/CMSArticle/Areas/Admin/Views/Articles/Index.cshtml
+++ b/CMSArticle/Areas/Admin/Views/Articles/Index.cshtml
@@ -31,7 +31,7 @@
             @Html.DisplayNameFor(model => model.Visit)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CategoryId)
+            دسته بندی
         </th>
         <th></th>
     </tr>
@@ -43,7 +43,7 @@
             @Html.DisplayFor(modelItem => item.Title)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.user.Name)
+            @item.user.Name @item.user.Family
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.RegisterDate)
@@ -68,7 +68,7 @@
             @Html.DisplayFor(modelItem => item.Visit)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.CategoryId)
+            @item.category.Title
         </td>
         <td>
             @Html.ActionLink("ویرایش", "Edit", new { id = item.ArticleId }, new { @class = "btn btn-warning" }) |
