--- a/CMSArticle/Areas/Admin/Views/Articles/Create.cshtml
+++ b/CMSArticle/Areas/Admin/Views/Articles/Create.cshtml
@@ -39,8 +39,7 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.UserId, "CategoryId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+دسته بندی ها            <div class="col-md-10">
                 @Html.DropDownList("CategoryId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
             </div>
@@ -55,9 +54,6 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
